feat(audio-chat): generate openAPI specs
